<resources>
    <string name="app_name">ScreenTime</string>
    <string name="team_a">Team A</string>
    <string name="free_throw">free throw</string>
    <string name="_2_points">+2 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="_3">3</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
    <string name="kid_a">Kid A</string>
    <string name="school">School</string>
    <string name="_house">house</string>
    <string name="kid_b">Kid B</string>
    <string name="screen">Screen</string>
    <string name="balance">Balance</string>
    <string name="_0">0</string>
</resources>
