<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/padding_title"
                android:text="@string/kid_a"
                android:textColor="@color/color_title"
                android:textSize="@dimen/textSize_title" />

            <TextView
                android:id="@+id/kid_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="@dimen/paddingBottom_big_score"
                android:text="@string/_0"
                android:textColor="@color/color_big_score"
                android:textSize="@dimen/textSize_big_score" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForSchoolKidA"
                        android:text="@string/school"
                        android:textColor="@color/color_button"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForHouseKidA"
                        android:text="@string/_house"
                        android:textColor="@color/color_button"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForBalanceKidA"
                        android:text="@string/balance"
                        android:textColor="@color/color_button"
                        android:textStyle="bold" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForScreenKidA"
                        android:text="@string/screen"
                        android:textColor="@color/color_button"
                        android:textStyle="bold"
                        android:theme="@style/OrangeButtonLightTheme" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/school_kid_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:onClick="addOneForSchoolKidA"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                    <TextView
                        android:id="@+id/house_kid_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:onClick="addOneForHouseKidA"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                    <TextView
                        android:id="@+id/balance_kid_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:onClick="addOneForBalanceKidA"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                    <TextView
                        android:id="@+id/screen_kid_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:onClick="addOneForScreenKidA"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-medium"
                android:padding="@dimen/padding_title"
                android:text="@string/kid_b"
                android:textColor="@color/color_title"
                android:textSize="@dimen/textSize_title" />

            <TextView
                android:id="@+id/kid_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:paddingBottom="@dimen/paddingBottom_big_score"
                android:text="@string/_0"
                android:textColor="@color/color_button"
                android:textSize="@dimen/textSize_big_score" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/school_kid_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:gravity="right"
                        android:onClick="addOneForSchoolKidB"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                    <TextView
                        android:id="@+id/house_kid_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:gravity="right"
                        android:onClick="addOneForHouseKidB"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                    <TextView
                        android:id="@+id/balance_kid_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:gravity="right"
                        android:onClick="addOneForBalanceKidB"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                    <TextView
                        android:id="@+id/screen_kid_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/marginBottom_small_score"
                        android:fontFamily="sans-serif-light"
                        android:gravity="right"
                        android:onClick="addOneForScreenKidB"
                        android:text="@string/_0"
                        android:textColor="@color/color_button"
                        android:textSize="@dimen/textSize_small_score" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForSchoolKidB"
                        android:text="@string/school"
                        android:textColor="@color/color_button"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForHouseKidB"
                        android:text="@string/_house"
                        android:textColor="@color/color_button"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForBalanceKidB"
                        android:text="@string/balance"
                        android:textColor="@color/color_button"
                        android:textStyle="bold" />

                    <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/buttonNormal_marginBottom"
                        android:layout_marginLeft="@dimen/buttonNormal_marginLeft"
                        android:layout_marginRight="@dimen/buttonNormal_marginRight"
                        android:onClick="addOneForScreenKidB"
                        android:text="@string/screen"
                        android:textColor="@color/color_button"
                        android:textStyle="bold"
                        android:theme="@style/OrangeButtonLightTheme" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textColor="@color/color_button"
        android:textStyle="bold" />

</RelativeLayout>

